[project]
name = "project-resonance"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "clearvoice>=0.1.2",
    "deepfilternet>=0.5.6",
    "gradio>=6.10.0",
    "numpy<2.0",
    "onnxruntime>=1.24.4",
    "pedalboard>=0.9.22",
    "pyloudnorm>=0.2.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "torchcodec>=0.11.0",
]
